// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image with simple fallback option width attribute inferior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-320.png 320w, test-420.png 420w\\"
      src=\\"test-420.png\\"
      width=\\"420\\"
    />
  </body>
</html>
"
`;

exports[`image with simple fallback option width attribute superior to the fallback 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      data-pristine=\\"test.png\\"
      sizes=\\"100vw\\"
      srcset=\\"test-320.png 320w, test-560.png 560w, test-789.png 789w\\"
      src=\\"test-480.png\\"
      width=\\"789\\"
    />
  </body>
</html>
"
`;
